examples/failing/MissingClassMemberExport.purs
module Test (Foo) where

  class Foo a where
    bar :: a -> a
